@@ -1,5 +1,7 @@
 vNEXT (in development)
 
+ * Added SourcedEvent interface for events that have a user source attached
+
 v0.10.3
 
  * Fix issue parsing CTCPs when the content contained multi-byte chars
